# league-dashboard

./: Makefile  README.md  live_matches_full_20251214.pkl  live_matches_half_20251214.pkl  live_matches_midway_20251215.pkl  live_scores.py  prototype.py  pyproject.toml
.streamlit/: config.toml
archive/: prototype.py
src/lgdash/: __init__.py  app.py  cli.py  client.py  constants.py  display.py  leagues.py
tests/: test_display.py  test_leagues.py
tests/data/: live_matches_arsenal_20251221.pkl  live_matches_in_progress_20251221.pkl  live_matches_midway2_20251215.pkl  live_matches_time_order_20251221.pkl
