[tool.poetry]
name = "lgdash"
version = "0.1.0"
description = "Command line tool for displaying live soccer scores and statistics."
authors = ["joypauls <joypaulsen3@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
lgdash = "lgdash.cli:cli"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
requests = "^2.32.3"
rich = "^13.9.4"
tzlocal = "^5.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
